--- a/WebApplication/scripts/app/components/postDetails/postDetails.html
+++ b/WebApplication/scripts/app/components/postDetails/postDetails.html
@@ -1,42 +1,45 @@
-﻿<div data-bind="foreach: postDetails">
-    <section id="body" class="container-fluid" data-bind="foreach: postDetail">
-        <div data-bind="if: title">
-            <h3 class="text-primary" data-bind="text: title">PostTitle</h3>
-        </div>
-        <hr />
-        <div class="text-justify" data-bind="html:body"> </div>
-        <!----<button type="button" class="btn btn-primary col-sm-offset-6">Add Annotation</button>
-        <button type="button" class="btn btn-primary col-sm-offset-9">Mark</button> --->
+﻿<!--<div>-->
+<section id="body" class="container-fluid" data-bind="foreach: details">
 
-    </section>
-    <section id="annotation" class="container-fluid">
-        <div class="btn-group" role="group" aria-label="...">
-            <span><label class="control-label">Add annotation : </label></span>
-            <span>
-                <label class="btn btn-default">
-                    <input type="checkbox" data-bind="checked:showAddAnotation">
-                </label>
-            </span>
-            <!--<input data-bind="value:newAnnotation, visible:showAddAnotation"/>-->
-            <!--<button type="button" class="btn btn-primary">Mark</button>-->
-            <!--<button type="button" class="btn btn-primary" data-bind="click:showAddAnotation">Add Annotation</button>-->
-        </div>
-        <form class="form-horizontal" data-bind="visible:showAddAnotation">
-            <div class="form-group">
-                <label class="control-label col-sm-2">Add annotation</label>
-                <div class="col-sm-10">
-                    <textarea class="form-control" cols="30" rows="5"></textarea>
-                    <button type="button" class="btn btn-primary">Submit</button>
-                </div>
+    <h3 class="text-primary" data-bind="text: title"></h3>
+    <hr />
+    <div class="text-justify" data-bind="html:body"> </div>
+    <!----<button type="button" class="btn btn-primary col-sm-offset-6">Add Annotation</button>
+    <button type="button" class="btn btn-primary col-sm-offset-9">Mark</button> --->
+</section>
+<!--</div>-->
+<section id="annotation" class="container-fluid">
+    <div class="btn-group" role="group" aria-label="...">
+        <span><label class="control-label"><h4 class="text-primary">Add annotation : </h4></label></span>
+        <span>
+            <label class="btn btn-default">
+                <input type="checkbox" data-bind="checked:showAddAnotation">
+            </label>
+        </span>
+        <!--<input data-bind="value:newAnnotation, visible:showAddAnotation"/>-->
+        <!--<button type="button" class="btn btn-primary">Mark</button>-->
+        <!--<button type="button" class="btn btn-primary" data-bind="click:showAddAnotation">Add Annotation</button>-->
+    </div>
+    <form class="form-horizontal" data-bind="visible:showAddAnotation">
+        <div class="form-group">
+            <div class="col-sm-10">
+                <textarea class="form-control" cols="30" rows="5"></textarea>
+                <button type="button" class="btn btn-primary">Submit</button>
             </div>
-        </form>
-    </section>
-
-    <section id="answer" class="container-fluid">
-        <h3 class="text-primary">Answers</h3>
-        <div data-bind="foreach: answerRelatedToPost" class="col-xm-11 col-xm-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1">
-            <div class="text-justify" data-bind="html:body"> </div><hr />
         </div>
-        <br />
-    </section>
-</div>
+    </form>
+</section>
+<section class="container-fluid">
+    <h3 class="text-primary">Answers</h3>
+    <div data-bind="foreach: answers" class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1">
+        <div class="text-justify" data-bind="html:$data.body"> </div><hr />
+    </div>
+    <br />
+</section>
+<section class="container-fluid">
+    <h3 class="text-primary">Comments</h3>
+    <div data-bind="foreach: comments" class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1">
+        <div class="text-justify" data-bind="html:$data.text"> </div><hr />
+    </div>
+    <br />
+</section>
