--- a/WebApplication/Content/main.css
+++ b/WebApplication/Content/main.css
@@ -13,3 +13,14 @@
 #list_search {
     padding-bottom: 15px;
 }
+
+.navbar-brand {
+    padding: 0 20px;
+}
+
+.selectedMenu {
+    color: blue;
+}
+#logo {
+    height: 50px;
+}
