--- a/WebApplication/scripts/app/components/postDetails/postDetails.html
+++ b/WebApplication/scripts/app/components/postDetails/postDetails.html
@@ -9,6 +9,7 @@
 </section>
 <!--</div>-->
 <section id="annotation" class="container-fluid">
+    <div><button type="button" class="btn btn-primary" data-bind="click: markPosts">Mark</button></div>
     <div class="btn-group" role="group" aria-label="...">
         <span><label class="control-label"><h4 class="text-primary">Add annotation : </h4></label></span>
         <span>
@@ -20,14 +21,16 @@
         <!--<button type="button" class="btn btn-primary">Mark</button>-->
         <!--<button type="button" class="btn btn-primary" data-bind="click:showAddAnotation">Add Annotation</button>-->
     </div>
-    <form class="form-horizontal" data-bind="visible:showAddAnotation">
-        <div class="form-group">
-            <div class="col-sm-10">
-                <textarea class="form-control" cols="30" rows="5"></textarea>
-                <button type="button" class="btn btn-primary">Submit</button>
+    <div data-bind="visible:showAddAnotation">
+        <form class="form-horizontal" data-bind="submit: addAnotation">
+            <div class="form-group">
+                <div class="col-sm-10">
+                    <textarea class="form-control" cols="30" rows="5" data-bind="value: annotationDescription"></textarea>
+                    <button type="submit" class="btn btn-primary" id="annotation_submit">Submit</button>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </section>
 <section class="container-fluid">
     <h3 class="text-primary">Answers</h3>
